<?xml version="1.0"?>
<package>
  <name>rosserial_leonardo_example</name>
  <version>0.0.0</version>
  <description>Example Leonardo Firmware</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosserial_msgs</build_depend>
</package>
